CHATS_SIT/force-app/main/default/objects/sfrosit_t_pmt_plan_hist__x/sfrosit_t_pmt_plan_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_pmt_plan_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_pmt_plan_hist</externalName>
    <label>Payment Plan History</label>
    <pluralLabel>Payment Plan History</pluralLabel>
</CustomObject>