CHATS_SIT/force-app/main/default/objects/sfrosit_t_pmt_plan_hist__x/fields/amt_plan_pmt__c.field-meta.xml
<CustomField>
    <fullName>amt_plan_pmt__c</fullName>
    <description>amt_plan_pmt</description>
    <externalDeveloperName>amt_plan_pmt</externalDeveloperName>
    <label>Plan Payment Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>