CHATS_SIT/force-app/main/default/objects/sfrosit_t_pmt_plan_hist__x/fields/amt_plan_pmt_pct_min__c.field-meta.xml
<CustomField>
    <fullName>amt_plan_pmt_pct_min__c</fullName>
    <description>amt_plan_pmt_pct_min</description>
    <externalDeveloperName>amt_plan_pmt_pct_min</externalDeveloperName>
    <label>Plan Payment percentage minimum amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>