CHATS_SIT/force-app/main/default/objects/sfrosit_t_pmt_plan_hist__x/fields/cde_freq__c.field-meta.xml
<CustomField>
    <fullName>cde_freq__c</fullName>
    <description>cde_freq</description>
    <externalDeveloperName>cde_freq</externalDeveloperName>
    <label>Frequency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>