CHATS_SIT/force-app/main/default/objects/sfrosit_t_pmt_plan_hist__x/fields/cde_status_pmt_plan__c.field-meta.xml
<CustomField>
    <fullName>cde_status_pmt_plan__c</fullName>
    <description>cde_status_pmt_plan</description>
    <externalDeveloperName>cde_status_pmt_plan</externalDeveloperName>
    <label>Plan Payment Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>