CHATS_SIT/force-app/main/default/objects/sfrosit_t_pmt_plan_hist__x/fields/idn_plan_pmt__c.field-meta.xml
<CustomField>
    <fullName>idn_plan_pmt__c</fullName>
    <description>idn_plan_pmt</description>
    <externalDeveloperName>idn_plan_pmt</externalDeveloperName>
    <label>Plan Payment ID</label>
    <length>50</length>
    <referenceTargetField>T_PMT_PLAN__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_PMT_PLAN__c</referenceTo>
    <relationshipLabel>Payment Plan Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_pmt_plan_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>