CHATS_SIT/force-app/main/default/objects/sfrosit_t_pmt_plan_hist__x/fields/idn_plan_pmt_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_plan_pmt_hist__c</fullName>
    <description>idn_plan_pmt_hist</description>
    <externalDeveloperName>idn_plan_pmt_hist</externalDeveloperName>
    <label>Plan Payment Hist ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>