CHATS_SIT/force-app/main/default/objects/sfrosit_t_pmt_plan_hist__x/fields/ind_provr_active__c.field-meta.xml
<CustomField>
    <fullName>ind_provr_active__c</fullName>
    <description>ind_provr_active</description>
    <externalDeveloperName>ind_provr_active</externalDeveloperName>
    <label>Active Provider</label>
    <length>1</length>
    <type>Text</type>
</CustomField>