CHATS_SIT/force-app/main/default/objects/sfrosit_t_pmt_plan_hist__x/fields/nbr_pctg__c.field-meta.xml
<CustomField>
    <fullName>nbr_pctg__c</fullName>
    <description>nbr_pctg</description>
    <externalDeveloperName>nbr_pctg</externalDeveloperName>
    <label>Percentage Number</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>